#*compilation*#
-*- mode: compilation; default-directory: "~/ECE650/potate/" -*-
Compilation started at Fri Feb 18 17:37:16

make -k 
g++ -o ringmaster -pedantic --std=c++11 -Wall -Werror -Wextra -g ringmaster.cpp network.cpp
network.cpp:89:32: error: no declaration matches ‘std::pair<std::__cxx11::basic_string<char>, long unsigned int> Network::getIPort()’
   89 | std::pair<std::string, size_t> Network::getIPort() {
      |                                ^~~~~~~
network.cpp:89:32: note: no functions named ‘std::pair<std::__cxx11::basic_string<char>, long unsigned int> Network::getIPort()’
In file included from network.cpp:1:
network.hpp:25:7: note: ‘class Network’ defined here
   25 | class Network {
      |       ^~~~~~~
make: *** [Makefile:13: ringmaster] Error 1
g++ -o player -pedantic --std=c++11 -Wall -Werror -Wextra -g player.cpp network.cpp
player.cpp: In member function ‘void Player::setupListenPort()’:
player.cpp:55:13: error: missing template arguments before ‘=’ token
   55 |   std::pair = getIpPort
      |             ^
player.cpp:55:15: error: ‘getIpPort’ was not declared in this scope
   55 |   std::pair = getIpPort
      |               ^~~~~~~~~
player.cpp:53:18: error: unused variable ‘info’ [-Werror=unused-variable]
   53 |   ConnectionInfo info;
      |                  ^~~~
cc1plus: all warnings being treated as errors
network.cpp:89:32: error: no declaration matches ‘std::pair<std::__cxx11::basic_string<char>, long unsigned int> Network::getIPort()’
   89 | std::pair<std::string, size_t> Network::getIPort() {
      |                                ^~~~~~~
network.cpp:89:32: note: no functions named ‘std::pair<std::__cxx11::basic_string<char>, long unsigned int> Network::getIPort()’
In file included from network.cpp:1:
network.hpp:25:7: note: ‘class Network’ defined here
   25 | class Network {
      |       ^~~~~~~
make: *** [Makefile:15: player] Error 1
make: Target 'all' not remade because of errors.

Compilation exited abnormally with code 2 at Fri Feb 18 17:37:17
